# PartObjaverse-Tiny-visualizations

./: .gitignore  LICENSE  README.md  color_mesh_parts.py  pyproject.toml  streamlit_app.py  utils.py
